[tool.poetry]
name = "password-hash"
version = "1.0.0"
description = "For hashing password with python"
authors = ["Masahiro Koti <workspace2110@gmail.com>"]
readme = "README.md"
packages = [{include = "password_hash"}]

[tool.poetry.dependencies]
python = "^3.12"
password-strength = "^0.0.3.post2"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
